--- a/kubernetes/db.yaml
+++ b/kubernetes/db.yaml
@@ -18,9 +18,15 @@ spec:
           image: oluwasanmivic123/docker_db:latest
           env:
             - name: POSTGRES_USER
-              value: "victoria"
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: postgres-user
             - name: POSTGRES_PASSWORD
-              value: "victoria"
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: postgres-password
             - name: POSTGRES_DB
               value: "postgres"
           ports:
