--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -1,20 +1,22 @@
-# Use an official Ruby base image with version 2.6
+#open-flights app
+# define the Ruby base image 
 FROM ruby:2.6-buster
 
 # Set the working directory inside the container to /app
 WORKDIR /app
 
-# Install system dependencies, including Node.js and PostgreSQL client
-RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
+# Install dependencies
+   # Install PostgreSQL client
+RUN apt-get update -qq && apt-get install -y postgresql-client
 
-# Install Node.js
+   #Install Node.js
 RUN curl -sL https://deb.nodesource.com/setup_14.x | bash -
 RUN apt-get install -y nodejs
 
-# Install Yarn
+    # Install Yarn
 RUN npm install -g yarn
 
-# Install Bundler version 2.3.6
+    # Install Bundler version 2.3.6
 RUN gem install bundler -v 2.3.6
 
 # Copy the Gemfile and Gemfile.lock to /app
@@ -30,7 +32,7 @@ RUN bundle install
 # Copy the entire application directory into /app
 COPY ./open-flights /app
 
-# Precompile assets using Webpacker
+# Precompile assets
 RUN bundle exec rails assets:precompile
 
 # Expose port 3000, which is typically used for Rails applications
