--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,4 +1,5 @@
-version: '3'
+version: '3.7'
+
 services:
   web:
     build:
@@ -9,17 +10,16 @@ services:
     depends_on:
       - db
     environment:
-      - DATABASE_URL=postgres://victoria:victoria@db:5432/budget_app_development
-   # command: ["sh", "-c", "bundle exec rails db:migrate && bundle exec rails server -b 0.0.0.0"]
+      - DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@db:5432/$POSTGRES_DB
 
   db:
     build:
       context: .
       dockerfile: Dockerfile.db
     environment:
-      POSTGRES_USER: victoria
-      POSTGRES_PASSWORD: victoria
-      POSTGRES_DB: open_flights_development
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: $POSTGRES_DB
     volumes:
       - db-data:/var/lib/postgresql/data
 
