--- a/argocd/argocd-secret.yaml
+++ b/argocd/argocd-secret.yaml
@@ -1,3 +1,6 @@
+# ArgoCD Secret for GitHub Credentials
+# use the command (echo -n "username/password" | base64) to get the secrets, apply with Kubectl apply -f argocd-secret.yaml
+
 apiVersion: v1
 kind: Secret
 metadata:
