--- a/kubernetes/secret.yaml
+++ b/kubernetes/secret.yaml
@@ -1,3 +1,6 @@
+# Secret for PostgreSQL
+# use the command (echo -n "username/password" | base64) to get the secrets, apply with Kubectl apply -f secret.yaml
+
 apiVersion: v1
 kind: Secret
 metadata:
