--- a/kubernetes/web.yaml
+++ b/kubernetes/web.yaml
@@ -1,3 +1,6 @@
+# Deployment for Ruby App
+#Apply the configuration with edited environment variables using the command: kubectl apply -f web.yaml."
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,11 +20,15 @@ spec:
           image: oluwasanmivic123/docker_web:latest
           env:
             - name: DATABASE_URL
-              value: "postgres://victoria:victoria@postgres:5432/your-postgres-database"
+              value: "postgres://$(postgres_user):$(postgres_password)@postgres:5432/your-postgres-database"
           ports:
             - containerPort: 3000
+          envFrom:
+            - secretRef:
+                name: postgres-secret
 
 ---
+# Service for Ruby App
 apiVersion: v1
 kind: Service
 metadata:
