--- a/tekton/secret.yaml
+++ b/tekton/secret.yaml
@@ -1,3 +1,7 @@
+# Kubernetes Secret for Docker Authentication
+
+# use the command (echo -n "username/password" | base64) to get the secrets, apply with Kubectl apply -f secret.yaml
+
 apiVersion: v1
 kind: Secret
 metadata:
