--- a/tekton/task.yaml
+++ b/tekton/task.yaml
@@ -1,3 +1,6 @@
+# Tekton Task for Building and Pushing Docker Images
+# Apply the configuration with edited environment variables using the command: "kubectl apply -f task.yaml"
+
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
@@ -10,7 +13,7 @@ spec:
   - name: DOCKERFILE_PATH
     description: "Path to the Dockerfile"
     type: string
-    default: "/workspace/source"  # Adjusted default path
+    default: "/workspace/source"  
   steps:
   - name: build-and-push-web
     image: gcr.io/kaniko-project/executor:latest
@@ -29,7 +32,7 @@ spec:
     - /kaniko/executor
     args:
     - "--context=dir:///workspace/source"
-    - "--dockerfile=$(params.DOCKERFILE_PATH)/Dockerfile.web"  # Adjusted Dockerfile path
+    - "--dockerfile=$(params.DOCKERFILE_PATH)/Dockerfile.web"  
     - "--destination=$(params.DOCKER_IMAGE)"
   - name: build-and-push-db
     image: gcr.io/kaniko-project/executor:latest
@@ -48,5 +51,5 @@ spec:
     - /kaniko/executor
     args:
     - "--context=dir:///workspace/source"
-    - "--dockerfile=$(params.DOCKERFILE_PATH)/Dockerfile.db"  # Adjusted Dockerfile path
+    - "--dockerfile=$(params.DOCKERFILE_PATH)/Dockerfile.db"  
     - "--destination=$(params.DOCKER_IMAGE)"
